--- a/index.html
+++ b/index.html
@@ -1,35 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>3D Mask & CSV Viewer</title>
+  <meta charset="UTF-8" />
+  <title>UDIP—FA Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Modern font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">
+
   <style>
+    /* ========= Global reset & base typography ========= */
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: 'Roboto', sans-serif; background: #f5f7fa; color: #333; height: 100vh; display: flex; flex-direction: column; }
-    header { background: #fff; padding: 10px 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); display: flex; align-items: center; }
-    header img { height: 50px; object-fit: contain; }
-    #container { display: flex; flex: 1; overflow: hidden; }
-    #mask-select-container { width: 220px; background: #fff; padding: 20px; border-right: 1px solid #e0e0e0; box-shadow: 2px 0 8px rgba(0,0,0,0.05); }
-    #mask-select-container h3 { font-size: 16px; font-weight: 500; margin-bottom: 12px; color: #444; }
-    #mask-select { width: 100%; padding: 10px; font-size: 14px; border: 1px solid #ccd0d5; border-radius: 4px; appearance: none;
-      background: url('data:image/svg+xml;utf8,<svg fill="%23666" height="12" viewBox="0 0 24 24" width="12" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>') no-repeat right 12px center;
-      background-color: #fff; background-size:12px; cursor:pointer; box-shadow: inset 0 1px 3px rgba(0,0,0,0.05); transition: border-color .2s; }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: #f5f7fa;
+      color: #333;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    /* ========= Top header ========= */
+    header {
+      background: #fff;
+      padding: 10px 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+    }
+    header img {
+      height: 50px;            /* Keep logo height consistent */
+      object-fit: contain;     /* Avoid distortion for non-16:9 logos */
+    }
+
+    /* ========= Main split layout (left selector + right content) ========= */
+    #container {
+      display: flex;
+      flex: 1;
+      overflow: hidden;        /* Prevent double scrollbars */
+    }
+
+    /* ========= Left panel: mask selector ========= */
+    #mask-select-container {
+      width: 220px;
+      background: #fff;
+      padding: 20px;
+      border-right: 1px solid #e0e0e0;
+      box-shadow: 2px 0 8px rgba(0,0,0,0.05);
+    }
+    #mask-select-container h3 {
+      font-size: 16px;
+      font-weight: 500;
+      margin-bottom: 12px;
+      color: #444;
+    }
+    #mask-select {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      border: 1px solid #ccd0d5;
+      border-radius: 4px;
+      appearance: none;  /* Hide native arrow for consistent styling */
+      /* Custom dropdown arrow */
+      background:
+        url('data:image/svg+xml;utf8,<svg fill="%23666" height="12" viewBox="0 0 24 24" width="12" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>')
+        no-repeat right 12px center;
+      background-color: #fff;
+      background-size: 12px;
+      cursor: pointer;
+      box-shadow: inset 0 1px 3px rgba(0,0,0,0.05);
+      transition: border-color .2s;
+    }
     #mask-select:hover { border-color: #a0a8b0; }
-    #mask-select:focus { border-color: #5b9dd9; outline: none; box-shadow: 0 0 0 3px rgba(91,157,217,0.3); }
+    #mask-select:focus {
+      border-color: #5b9dd9;
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(91,157,217,0.3);
+    }
 
-    #main-panel { flex: 1; display: flex; flex-direction: column; background: #fff; margin: 20px; border-radius: 4px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); overflow: hidden; }
-    #viewer-container { flex: 2; border-bottom: 1px solid #e0e0e0; }
-    #mask-viewer { width: 100%; height: 100%; border: none; }
-    #table-container { flex: 1; overflow: auto; padding: 12px; background: #fafafa; }
-    #table-container table { width: 100%; border-collapse: collapse; }
-    #table-container th, #table-container td { border:1px solid #ddd; padding:6px; font-size:12px; }
-    #table-container th { background:#f1f1f1; font-weight:500; }
+    /* ========= Right panel: viewer (iframe) + table ========= */
+    #main-panel {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      background: #fff;
+      margin: 20px;
+      border-radius: 4px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      overflow: hidden;        /* Clip inner scroll at rounded corners */
+    }
 
-    footer { background: #fff; padding: 10px 20px; font-size:12px; color:#666; text-align:center; border-top:1px solid #e0e0e0; box-shadow:0 -2px 4px rgba(0,0,0,0.05); }
-    footer a { color:#007acc; text-decoration:none; }
-    footer a:hover { text-decoration:underline; }
+    /* Top half: 3D viewer */
+    #viewer-container {
+      flex: 2;
+      border-bottom: 1px solid #e0e0e0;
+      min-height: 240px;       /* Ensure usable height on short screens */
+    }
+    #mask-viewer {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    /* Bottom half: CSV table area */
+    #table-container {
+      flex: 1;
+      overflow: auto;          /* Scroll table when large */
+      padding: 12px;
+      background: #fafafa;
+    }
+    #table-container table {
+      width: 100%;
+      border-collapse: collapse;
+      font-variant-numeric: tabular-nums;  /* Align digits nicely */
+    }
+    #table-container th,
+    #table-container td {
+      border: 1px solid #ddd;
+      padding: 8px 10px;
+      font-size: 12px;
+    }
+    #table-container th {
+      background: #f1f1f1;
+      font-weight: 500;
+      position: sticky;   /* Sticky header stays visible while scrolling */
+      top: 0;
+      z-index: 1;
+    }
+    /* Zebra stripes for readability */
+    #table-container tbody tr:nth-child(even) {
+      background: #fcfcfc;
+    }
+    /* Truncate very long cell content gracefully */
+    #table-container td {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    /* ========= Footer ========= */
+    footer {
+      background: #fff;
+      padding: 10px 20px;
+      font-size: 12px;
+      color: #666;
+      text-align: center;
+      border-top: 1px solid #e0e0e0;
+      box-shadow: 0 -2px 4px rgba(0,0,0,0.05);
+    }
+    footer a { color: #007acc; text-decoration: none; }
+    footer a:hover { text-decoration: underline; }
+
+    /* ========= Responsive tweaks ========= */
+    @media (max-width: 900px) {
+      /* Stack panels vertically on small screens */
+      #container { flex-direction: column; }
+      /* Turn left sidebar into a compact top bar */
+      #mask-select-container {
+        width: auto;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        border-right: none;
+        border-bottom: 1px solid #e0e0e0;
+        box-shadow: none;
+      }
+      #main-panel { margin: 10px; }
+    }
   </style>
 </head>
 <body>
@@ -56,56 +192,138 @@
   <footer>
     Unveiling genetic architecture of white matter microstructure through unsupervised deep representation learning of fractional anisotropy images<br>
     Xingzhong Zhao, Ziqian Xie, Wei He, Myriam Fornage, Degui Zhi<br>
-    medRxiv 2025.07.04.25330856; doi: <a href="https://doi.org/10.1101/2025.07.04.25330856" target="_blank">10.1101/2025.07.04.25330856</a>
+    medRxiv 2025.07.04.25330856; doi:
+    <a href="https://doi.org/10.1101/2025.07.04.25330856" target="_blank">10.1101/2025.07.04.25330856</a>
   </footer>
 
   <script>
-    // Update to match your actual folder names
-    const htmlBase = '3d_html_masks';
-    const csvBase  = 'WM_stat';      // ← your CSVs live here: WM_stat/Dim_0.csv … Dim_127.csv
+    // ======== Base folders (adjust to your paths if needed) ========
+    const htmlBase = '3d_html_masks';  // Where your 3D HTML files live (e.g., 3d_html_masks/Dim_0.html)
+    const csvBase  = 'WM_stat';        // Where your CSV files live (e.g., WM_stat/Dim_0.csv)
 
-    // Build mask list
-    const masks = Array.from({length:128},(_,i)=>`Dim_${i}`);
+    // ======== Build the mask list: Dim_0 ... Dim_127 ========
+    const masks = Array.from({ length: 128 }, (_, i) => `Dim_${i}`);
+
+    // ======== DOM elements ========
     const selectEl = document.getElementById('mask-select');
     const maskFrame = document.getElementById('mask-viewer');
     const tableContainer = document.getElementById('table-container');
 
-    masks.forEach(name=>{
+    // Populate the dropdown
+    masks.forEach(name => {
       const opt = document.createElement('option');
-      opt.value=name; opt.textContent=name;
+      opt.value = name;
+      opt.textContent = name;
       selectEl.appendChild(opt);
     });
 
-    selectEl.addEventListener('change',e=>{
-      const name=e.target.value;
-      if(!name){
-        maskFrame.src=''; tableContainer.innerHTML=''; return;
-      }
-      // load 3D html
-      maskFrame.src=`${htmlBase}/${name}.html`;
-      // fetch and render CSV
-      fetch(`${csvBase}/${name}.csv`)
-        .then(r=>{
-          console.log('Fetch',r.status, r.url);
-          if(!r.ok) throw new Error(`CSV ${name} not found`);
-          return r.text();
-        })
-        .then(text=>{
-          const rows=text.trim().split('\n').map(r=>r.split(','));
-          const tbl=document.createElement('table');
-          const thead=tbl.createTHead().insertRow();
-          rows[0].forEach(c=>{ const th=document.createElement('th'); th.textContent=c; thead.appendChild(th); });
-          const tbody=tbl.createTBody();
-          rows.slice(1).forEach(r=>{
-            const tr=tbody.insertRow();
-            r.forEach(c=>{ const td=tr.insertCell(); td.textContent=c; });
-          });
-          tableContainer.innerHTML=''; tableContainer.appendChild(tbl);
-        })
-        .catch(err=>{
-          console.error(err);
-          tableContainer.textContent = 'Unable to load CSV data.';
+    // ======== Option A: force a fixed display header (simple & robust) ========
+    // Use this if your CSV has no header or you want to standardize column names everywhere.
+    const DISPLAY_HEADER = ['WM tracts', 'Abbreviation', 'observed T value',  'P (Bonf.)'];
+
+    // Optional column reordering:
+    // If your original CSV column order is different and you want to display as 3,2,4,5 (R's 1-based),
+    // set 0-based indices here: [2,1,3,4]. Set to null to keep original order.
+    const REORDER_IDX = [2, 1, 3, 4]; // set to null if you don't need reordering
+
+    // ======== Option B: rename by original column names (use this OR Option A, not both) ========
+    // Enable this if your CSV already has a header and you just want to rename a few headers.
+    // If you use Option B, comment out the Option A header override block below.
+    const renameMap = {
+      'WM tracts': 'WM tracts',
+      'Abbreviation': 'Abbreviation',
+      'P value': 'observed T value',
+      'PBonf.': 'P (Bonf.)'
+    };
+
+    // Utility: render the 2D array "rows" as a table in #table-container
+    function renderTable(rows) {
+      const tbl = document.createElement('table');
+
+      // Header
+      const theadRow = tbl.createTHead().insertRow();
+      rows[0].forEach(c => {
+        const th = document.createElement('th');
+        th.textContent = c;
+        theadRow.appendChild(th);
+      });
+
+      // Body
+      const tbody = tbl.createTBody();
+      rows.slice(1).forEach(r => {
+        const tr = tbody.insertRow();
+        r.forEach(c => {
+          const td = tr.insertCell();
+          td.textContent = c;
         });
+      });
+
+      tableContainer.innerHTML = '';
+      tableContainer.appendChild(tbl);
+    }
+
+    // Main: handle dropdown changes
+    selectEl.addEventListener('change', async (e) => {
+      const name = e.target.value;
+      if (!name) {
+        maskFrame.src = '';
+        tableContainer.innerHTML = '';
+        return;
+      }
+
+      // Load the 3D HTML into the iframe
+      maskFrame.src = `${htmlBase}/${name}.html`;
+
+      // Show a lightweight loading state for the table
+      tableContainer.textContent = 'Loading CSV…';
+
+      try {
+        // Fetch CSV text (same-origin expected when hosted together)
+        const resp = await fetch(`${csvBase}/${name}.csv`);
+        if (!resp.ok) throw new Error(`CSV ${name} not found (${resp.status})`);
+        let text = await resp.text();
+
+        // Normalize newlines and strip UTF-8 BOM if present
+        text = text.replace(/^\uFEFF/, '');
+
+        // Lightweight CSV parsing (works if no commas inside quoted fields)
+        let rows = text.trim().split(/\r?\n/).map(line => line.split(','));
+
+        if (!rows.length || !rows[0].length) {
+          tableContainer.textContent = 'CSV is empty or malformed.';
+          return;
+        }
+
+        // Optional: reorder columns if REORDER_IDX is set
+        if (Array.isArray(REORDER_IDX)) {
+          rows = rows.map(r => REORDER_IDX.map(i => r[i] ?? ''));
+        }
+
+        // ======== Option A in action: override or inject fixed headers ========
+        // Very simple heuristic to decide whether the first row looks like a header.
+        const looksLikeHeader = rows.length && /[A-Za-z]/.test(rows[0].join(''));
+        if (looksLikeHeader) {
+          // Replace the header row with your fixed display names
+          rows[0] = DISPLAY_HEADER.slice(0, rows[0].length);
+        } else {
+          // No header present: insert one
+          const cols = rows[0]?.length || DISPLAY_HEADER.length;
+          rows.unshift(DISPLAY_HEADER.slice(0, cols));
+        }
+
+        // ======== Option B alternative (use instead of Option A) ========
+        // If you prefer renaming based on original names, uncomment below
+        // and comment out the Option A block above.
+        //
+        // if (rows.length) {
+        //   rows[0] = rows[0].map(h => renameMap[h] ?? h);
+        // }
+
+        renderTable(rows);
+      } catch (err) {
+        console.error(err);
+        tableContainer.textContent = 'Unable to load CSV data.';
+      }
     });
   </script>
 </body>
