--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     // Optional column reordering:
     // If your original CSV column order is different and you want to display as 3,2,4,5 (R's 1-based),
     // set 0-based indices here: [2,1,3,4]. Set to null to keep original order.
-    const REORDER_IDX = [2, 1, 3, 4]; // set to null if you don't need reordering
+    const REORDER_IDX = []; // set to null if you don't need reordering
 
     // ======== Option B: rename by original column names (use this OR Option A, not both) ========
     // Enable this if your CSV already has a header and you just want to rename a few headers.
