--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     // Optional column reordering:
     // If your original CSV column order is different and you want to display as 3,2,4,5 (R's 1-based),
     // set 0-based indices here: [2,1,3,4]. Set to null to keep original order.
-    const REORDER_IDX = []; // set to null if you don't need reordering
+    //const REORDER_IDX = []; // set to null if you don't need reordering
 
     // ======== Option B: rename by original column names (use this OR Option A, not both) ========
     // Enable this if your CSV already has a header and you just want to rename a few headers.
@@ -295,9 +295,9 @@
         }
 
         // Optional: reorder columns if REORDER_IDX is set
-        if (Array.isArray(REORDER_IDX)) {
-          rows = rows.map(r => REORDER_IDX.map(i => r[i] ?? ''));
-        }
+        // if (Array.isArray(REORDER_IDX)) {
+        //   rows = rows.map(r => REORDER_IDX.map(i => r[i] ?? ''));
+        // }
 
         // ======== Option A in action: override or inject fixed headers ========
         // Very simple heuristic to decide whether the first row looks like a header.
