--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       'WM tracts': 'WM tracts',
       'Abbreviation': 'Abbreviation',
       'P value': 'observed T value',
-      'PBonf.': 'P (Bonf.)'
+      'PBonf.': 'P value'
     };
 
     // Utility: render a 2D array "rows" as a table
