--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     // ======== Display header (Option A: fixed headers) ========
     // Use this if your CSV has no header or you want standardized names.
-    const DISPLAY_HEADER = ['WM tracts', 'Abbreviation', 'observed T value', 'P (Bonf.)'];
+    const DISPLAY_HEADER = ['WM tracts', 'Abbreviation', 'observed T value', 'P value'];
 
     // ======== (Optional) rename map (Option B: use instead of Option A) ========
     // If you prefer renaming by original header names, enable Option B and
