--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
   <div id="container">
     <div id="mask-select-container">
-      <h3>Select a Mask</h3>
+      <h3>Select a dimmension for visualization </h3>
       <select id="mask-select">
         <option value="">-- choose a mask --</option>
       </select>
