--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
       overflow: hidden;        /* Clip inner scroll at rounded corners */
     }
 
-    /* Top half: 3D viewer */
+    /* Top: 3D viewer ——— 缩小一点：把 flex 从 2 改为 1 */
     #viewer-container {
-      flex: 2;
+      flex: 1;                 /* ← 调小/调大：改这个数字 */
       border-bottom: 1px solid #e0e0e0;
-      min-height: 240px;       /* Ensure usable height on short screens */
+      min-height: 220px;       /* Ensure usable height on short screens */
     }
     #mask-viewer {
       width: 100%;
@@ -101,9 +101,9 @@
       border: none;
     }
 
-    /* Bottom half: CSV table area */
+    /* Bottom: CSV table ——— 扩大一点：把 flex 从 1 改为 1.5 */
     #table-container {
-      flex: 1;
+      flex: 1.5;               /* ← 调小/调大：改这个数字 */
       overflow: auto;          /* Scroll table when large */
       padding: 12px;
       background: #fafafa;
@@ -127,9 +127,7 @@
       z-index: 1;
     }
     /* Zebra stripes for readability */
-    #table-container tbody tr:nth-child(even) {
-      background: #fcfcfc;
-    }
+    #table-container tbody tr:nth-child(even) { background: #fcfcfc; }
     /* Truncate very long cell content gracefully */
     #table-container td {
       white-space: nowrap;
@@ -152,9 +150,7 @@
 
     /* ========= Responsive tweaks ========= */
     @media (max-width: 900px) {
-      /* Stack panels vertically on small screens */
       #container { flex-direction: column; }
-      /* Turn left sidebar into a compact top bar */
       #mask-select-container {
         width: auto;
         display: flex;
@@ -175,7 +171,7 @@
 
   <div id="container">
     <div id="mask-select-container">
-      <h3>Select a dimmension for visualization </h3>
+      <h3>Select a dimension for visualization</h3>
       <select id="mask-select">
         <option value="">-- choose a mask --</option>
       </select>
@@ -201,15 +197,12 @@
     const htmlBase = '3d_html_masks';  // ex: 3d_html_masks/Dim_0.html
     const csvBase  = 'WM_stat';        // ex: WM_stat/Dim_0.csv
 
-    // ======== Build display (1-based) vs fetch/search (0-based) names ========
-    // Show:  Dim1 ... Dim128
-    // Value: Dim_0 ... Dim_127  (matches your file names)
+    // Show: Dim1 ... Dim128 ; Value: Dim_0 ... Dim_127 (matches file names)
     const masks = Array.from({ length: 128 }, (_, i) => ({
-      label: `Dim${i + 1}`,  // what user sees; use `Dim_${i+1}` if you prefer underscore
-      value: `Dim_${i}`      // used for fetching files
+      label: `Dim${i + 1}`,
+      value: `Dim_${i}`
     }));
 
-    // ======== DOM elements ========
     const selectEl = document.getElementById('mask-select');
     const maskFrame = document.getElementById('mask-viewer');
     const tableContainer = document.getElementById('table-container');
@@ -217,38 +210,22 @@
     // Populate the dropdown
     masks.forEach(({ label, value }) => {
       const opt = document.createElement('option');
-      opt.value = value;       // e.g., "Dim_0"
-      opt.textContent = label; // e.g., "Dim1"
+      opt.value = value;
+      opt.textContent = label;
       selectEl.appendChild(opt);
     });
 
-    // ======== Display header (Option A: fixed headers) ========
-    // Use this if your CSV has no header or you want standardized names.
+    // Use standardized display headers for the CSV
     const DISPLAY_HEADER = ['WM tracts', 'Abbreviation', 'observed T value', 'P value'];
 
-    // ======== (Optional) rename map (Option B: use instead of Option A) ========
-    // If you prefer renaming by original header names, enable Option B and
-    // comment out the Option A block in the change handler below.
-    const renameMap = {
-      'WM tracts': 'WM tracts',
-      'Abbreviation': 'Abbreviation',
-      'P value': 'observed T value',
-      'PBonf.': 'P value'
-    };
-
-    // Utility: render a 2D array "rows" as a table
     function renderTable(rows) {
       const tbl = document.createElement('table');
-
-      // Header
       const theadRow = tbl.createTHead().insertRow();
       rows[0].forEach(c => {
         const th = document.createElement('th');
         th.textContent = c;
         theadRow.appendChild(th);
       });
-
-      // Body
       const tbody = tbl.createTBody();
       rows.slice(1).forEach(r => {
         const tr = tbody.insertRow();
@@ -257,60 +234,31 @@
           td.textContent = c;
         });
       });
-
       tableContainer.innerHTML = '';
       tableContainer.appendChild(tbl);
     }
 
-    // Main: handle dropdown changes
     selectEl.addEventListener('change', async (e) => {
-      const zeroBasedName = e.target.value; // "Dim_0" ... "Dim_127"
-      if (!zeroBasedName) {
-        maskFrame.src = '';
-        tableContainer.innerHTML = '';
-        return;
-      }
+      const name = e.target.value; // "Dim_0" ... "Dim_127"
+      if (!name) { maskFrame.src = ''; tableContainer.innerHTML = ''; return; }
 
-      // Load the 3D HTML into the iframe (0-based filename)
-      maskFrame.src = `${htmlBase}/${zeroBasedName}.html`;
+      // Load the 3D HTML (viewer)
+      maskFrame.src = `${htmlBase}/${name}.html`;
 
-      // Show a lightweight loading state for the table
+      // Load the CSV and render
       tableContainer.textContent = 'Loading CSV…';
-
       try {
-        // Fetch CSV text (same-origin expected when hosted together)
-        const resp = await fetch(`${csvBase}/${zeroBasedName}.csv`);
-        if (!resp.ok) throw new Error(`CSV ${zeroBasedName} not found (${resp.status})`);
-        let text = await resp.text();
+        const resp = await fetch(`${csvBase}/${name}.csv`);
+        if (!resp.ok) throw new Error(`CSV ${name} not found (${resp.status})`);
+        let text = (await resp.text()).replace(/^\uFEFF/, '');
 
-        // Normalize newlines and strip UTF-8 BOM if present
-        text = text.replace(/^\uFEFF/, '');
+        const rows = text.trim().split(/\r?\n/).map(line => line.split(','));
+        if (!rows.length || !rows[0].length) { tableContainer.textContent = 'CSV is empty or malformed.'; return; }
 
-        // Lightweight CSV parsing (works if no commas inside quoted fields)
-        let rows = text.trim().split(/\r?\n/).map(line => line.split(','));
-
-        if (!rows.length || !rows[0].length) {
-          tableContainer.textContent = 'CSV is empty or malformed.';
-          return;
-        }
-
-        // ======== Option A: override or inject fixed headers ========
-        // Simple heuristic to decide whether first row looks like a header.
-        const looksLikeHeader = rows.length && /[A-Za-z]/.test(rows[0].join(''));
-        if (looksLikeHeader) {
-          // Replace the header row with your fixed display names
-          rows[0] = DISPLAY_HEADER.slice(0, rows[0].length);
-        } else {
-          // No header present: insert one
-          const cols = rows[0]?.length || DISPLAY_HEADER.length;
-          rows.unshift(DISPLAY_HEADER.slice(0, cols));
-        }
-
-        // ======== Option B (alternative): rename by original headers ========
-        // Use this instead of Option A above (comment Option A block if enabling).
-        // if (rows.length) {
-        //   rows[0] = rows[0].map(h => renameMap[h] ?? h);
-        // }
+        // Replace header (or insert if missing)
+        const looksLikeHeader = /[A-Za-z]/.test(rows[0].join(''));
+        if (looksLikeHeader) rows[0] = DISPLAY_HEADER.slice(0, rows[0].length);
+        else rows.unshift(DISPLAY_HEADER.slice(0, rows[0].length || DISPLAY_HEADER.length));
 
         renderTable(rows);
       } catch (err) {
@@ -319,9 +267,9 @@
       }
     });
 
-    // (Optional) auto-select the first item on load:
-     selectEl.value = masks[0].value;           // "Dim_0"
-     selectEl.dispatchEvent(new Event('change'));
+    // Auto-select first item on load
+    selectEl.value = masks[0].value;
+    selectEl.dispatchEvent(new Event('change'));
   </script>
 </body>
 </html>
